--- a/scss/sections/_body.scss
+++ b/scss/sections/_body.scss
@@ -13,5 +13,5 @@ a {
 
 body {
   width: 100vw;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
