--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -130,7 +130,7 @@ $media-desktop: "only screen and (min-width : 768px)";
   .menu-list {
     color: white;
     font-weight: 600;
-    font-size: 46px;
+    font-size: 40px;
     line-height: 110px;
     padding-left: 20px;
     padding-top: 50px;
