--- a/scss/sections/_home.scss
+++ b/scss/sections/_home.scss
@@ -15,7 +15,7 @@ $media-desktop: "only screen and (min-width : 768px)";
   }
 
   &__overlay {
-    // padding: 10px;
+    padding-top: 40px;
     height: 100%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.5);
@@ -26,7 +26,7 @@ $media-desktop: "only screen and (min-width : 768px)";
   }
 
   &__head {
-    margin: 30px 0 20px 0;
+    margin: 0 0 20px 0;
 
     @media #{$media-desktop} {
       width: 90%;
